kube-infra/kustomize/demo/argo-rollouts-demo/envs/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  annotations:
    keptn.sh/lifecycle-toolkit: "enabled"
