kube-infra/kustomize/demo/argo-rollouts-demo/envs/dev/canary-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: keptn-ortelius-service-prod
  namespace: demo
  annotations:
    notifications.argoproj.io/subscribe.on-rollout-completed.slack: argo-notifications
    notifications.argoproj.io/subscribe.on-rollout-updated.slack: argo-notifications
    notifications.argoproj.io/subscribe.on-rollout-aborted.slack: argo-notifications
spec:
  replicas: 5
  minReadySeconds: 30
  strategy:
    canary:
      # analysis:
      #   templates:
      #   - templateName: success-rate
      #   args:
      #   - name: service-name
      #     value: demo-stable
      canaryService: demo-canary
      stableService: demo-stable
      # trafficRouting:
      #   nginx:
      #     stableIngress: canary-stable
      steps:
       - setWeight: 25
       - pause: {}
       - setWeight: 50
       - pause: {}
       - setWeight: 75
       - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
      - name: demo
        image: argoproj/rollouts-demo:yellow
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
