kube-infra/kustomize/demo/argo-rollouts-demo/envs/dev/canary-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-canary
  namespace: demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: canary-demo
